# pldag-rust

./: Cargo.toml  README.md
.github/workflows/: test.yml
examples/: readme_example.rs
src/: error.rs  lib.rs  pldag.rs  storage.rs
tests/: solve.rs
