[package]
name        = "pldag"
version     = "4.0.0"
edition     = "2021"
description = "A DAG-based combinatorial-model framework with optional GLPK solving back-end."
license     = "MIT"
repository  = "https://github.com/ourstudio-se/pldag-rust"
homepage    = "https://github.com/ourstudio-se/pldag-rust"
keywords    = ["ilp", "milp", "combinatorics", "glpk"]
categories  = ["science", "mathematics", "algorithms"]

# ───────────────────────────────────────────────────────────
# 1. Dependencies that are always built
# ───────────────────────────────────────────────────────────
[dependencies]
bimap      = "0.6.3"
indexmap   = "2.12.1"
itertools  = "0.14.0"

# ───────────────────────────────────────────────────────────
# 2. GLPK FFI crate — *only* compiled if the `glpk` feature
#    is enabled further below
# ───────────────────────────────────────────────────────────
glpk-rust = { version = "0.1.11", optional = true, default-features = false }
tracing = { version = "0.1", optional = true, features = ["attributes"], default-features = false}
serde_json = "1.0.145"
glob-match = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }

# ───────────────────────────────────────────────────────────
# 3. Feature flags
#    • default  ⇢ modelling-only, no GPL code
#    • glpk     ⇢ pulls in the GPL-licensed FFI and links to
#                libglpk (static or dynamic, whatever the
#                user’s system provides)
# ───────────────────────────────────────────────────────────
[features]
default = []
glpk    = ["glpk-rust"]   # additive: once enabled, binary is GPL
trace   = ["tracing"]

[dev-dependencies]
pldag = { path = ".", features = ["glpk"] }

